crates/providers/gemini/tests/snapshots/translate__tool_choice_none.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Don't use tools."
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  },
  "toolConfig": {
    "functionCallingConfig": {
      "mode": "NONE"
    }
  }
}
