crates/providers/gemini/tests/snapshots/translate__tool_choice_specific.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Search for me."
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  },
  "toolConfig": {
    "functionCallingConfig": {
      "mode": "ANY",
      "allowedFunctionNames": [
        "search_web"
      ]
    }
  }
}
