crates/providers/gemini/tests/snapshots/translate__tool_result_to_function_response.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "What's the weather in London?"
        }
      ]
    },
    {
      "role": "model",
      "parts": [
        {
          "functionCall": {
            "name": "get_weather",
            "args": {
              "location": "London"
            }
          }
        }
      ]
    },
    {
      "role": "function",
      "parts": [
        {
          "functionResponse": {
            "name": "get_weather",
            "response": {
              "content": "{\"temperature\":15,\"unit\":\"C\"}"
            }
          }
        }
      ]
    },
    {
      "role": "user",
      "parts": [
        {
          "text": "Thanks!"
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  }
}
