crates/providers/gemini/tests/snapshots/translate__tools_translation.snap
---
source: crates/providers/gemini/tests/translate.rs
expression: "&body"
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "What's the weather?"
        }
      ]
    }
  ],
  "generationConfig": {
    "temperature": 0.7,
    "maxOutputTokens": 1024
  },
  "tools": [
    {
      "functionDeclarations": [
        {
          "name": "get_weather",
          "description": "Get the current weather.",
          "parameters": {
            "properties": {
              "location": {
                "type": "string"
              }
            },
            "required": [
              "location"
            ],
            "type": "object"
          }
        },
        {
          "name": "search_web",
          "description": "Search the web.",
          "parameters": {
            "properties": {
              "query": {
                "type": "string"
              }
            },
            "type": "object"
          }
        }
      ]
    }
  ]
}
